fix scroll on mobile device browser v2

--- a/css/style.css
+++ b/css/style.css
@@ -117,14 +117,10 @@ body {
 
 .section-wraper {
   display: flex;
-  width: 200%;
+  width: 100%;
   height: 100vh;
 }
 
-.section-wraper.active {
-  width: 100%;
-  display: block;
-}
 
 .hero-section {
   display: flex;
@@ -134,8 +130,8 @@ body {
   align-items: center;
   width: 100%;
   height: 100vh;
-  position: relative;
-  left: -50%;
+  position: fixed;
+  left: 0;
 }
 
 .hero-story {
@@ -255,7 +251,7 @@ body {
   background-size: cover;
   position: relative;
   z-index: 100;
-  left: -50%;
+  left: -100%;
   transition: left 1500ms;
   display: flex;
   flex-direction: column;
@@ -266,7 +262,7 @@ body {
 }
 
 .game-section.active {
-  left: 0;
+  left: 0%;
 }
 
 
